--- a/explore/index.html
+++ b/explore/index.html
@@ -8,6 +8,8 @@
         <title>Trafford Data Lab: Explore</title>
 
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
+        <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.3.0/dist/MarkerCluster.css"/>
+        <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.3.0/dist/MarkerCluster.Default.css"/>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
         <link rel="stylesheet" href="https://www.trafforddatalab.io/css/labBase.css"/>
         <link rel="stylesheet" href="https://www.trafforddatalab.io/assets/leaflet/labLeafletMap.css"/>
@@ -64,6 +66,7 @@
         <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/leaflet.locatecontrol@0.62.0/dist/L.Control.Locate.min.js"></script>
+        <script src="https://unpkg.com/leaflet.markercluster@1.3.0/dist/leaflet.markercluster.js"></script>
         <script src="https://www.trafforddatalab.io/assets/javascript/labError.js"></script>
         <script src="https://www.trafforddatalab.io/assets/javascript/labAjax.js"></script>
         <script src="https://www.trafforddatalab.io/assets/javascript/labGetQryStrValByKey.js"></script>
@@ -107,6 +110,27 @@
                 });
             }
 
+            // This function is for styling non-point data. If it has internal styling properties use them, otherwise use a default
+            function styleOverlayData(feature) {
+                var styles = {
+                    color: '#fc6721',
+                    fillColor: '#fc6721',
+                    opacity: 0.5,
+                    fillOpacity: 0.2
+                };
+
+                var props = feature.properties;
+                if (props != null) {
+                    if (props['stroke'] != null) styles['color'] = props['stroke'];
+                    if (props['stroke-width'] != null) styles['weight'] = props['stroke-width'];
+                    if (props['stroke-opacity'] != null) styles['opacity'] = props['stroke-opacity'];
+                    if (props['fill'] != null) styles['fillColor'] = props['fill'];
+                    if (props['fill-opacity'] != null) styles['fillOpacity'] = props['fill-opacity'];
+                }
+
+                return styles;
+            }
+
             // To setup any point data features within GeoJSON
             function pointData (feature, latlng) {
                 if (feature.hasOwnProperty('properties') && feature.properties.hasOwnProperty('featureRadius') && feature.properties.featureRadius !== '') {
@@ -120,16 +144,20 @@
             // Reset the styling of a previously selected feature
             function resetFeatureStyle() {
                 if (labMap.featureCache != null) {
-                    if (labMap.featureCache.target.type == 'marker') {
-                        labMap.featureCache.target.setIcon(labMap.marker);
+                    if (labMap.featureCache.type == 'marker') {
+                        labMap.featureCache.setIcon(labMap.marker);
                     }
                     else {
-                        // work out if the feature is an overlay externally loaded layer or one of the geographies as the reset process is slightly different
-                        if (labMap.overlayData != null && labMap.overlayData.hasLayer(labMap.featureCache.target)) {
-                            labMap.overlayData.resetStyle(labMap.featureCache.target);
+                        // work out if the feature belongs to a dataset or one of the boundary geographies as the reset process is slightly different
+                        if (labMap.datasetGeoJson != null && labMap.datasetGeoJson.hasLayer(labMap.featureCache)) {
+                            labMap.datasetGeoJson.resetStyle(labMap.featureCache);
                         }
                         else {
-                            labMap.featureCache.target.setStyle(labMap.poly);
+                            // The currently selected feature is a polygon and could be from any one of the geography boundary layers.
+                            // It is therefore easier to set the style to the non-selected default than use the Leaflet GeoJSON resetStyle function to achieve the same.
+                            // This is because we would have to know which geoJson object the selected layer was from.
+                            // We also know what the non-selected style should be for these features as they cannot be styled using attributes within the properties object
+                            labMap.featureCache.setStyle(labMap.poly);
                         }
                     }
                 }
@@ -154,7 +182,7 @@
                 }
 
                 // set new selected feature in the cache
-                labMap.featureCache = e;
+                labMap.featureCache = layer;
 
                 // build the content for the properties table to be displayed
                 if (layer.feature.hasOwnProperty('properties')) {
@@ -173,31 +201,14 @@
                 }
             }
 
-            // This function is for styling non-point data. If it has internal styling properties use them, otherwise use a default
-            function styleOverlayData(feature) {
-                var styles = {
-                    color: '#fc6721',
-                    fillColor: '#fc6721',
-                    opacity: 0.5,
-                    fillOpacity: 0.2
-                };
-
-                var props = feature.properties;
-                if (props != null) {
-                    if (props['stroke'] != null) styles['color'] = props['stroke'];
-                    if (props['stroke-width'] != null) styles['weight'] = props['stroke-width'];
-                    if (props['stroke-opacity'] != null) styles['opacity'] = props['stroke-opacity'];
-                    if (props['fill'] != null) styles['fillColor'] = props['fill'];
-                    if (props['fill-opacity'] != null) styles['fillOpacity'] = props['fill-opacity'];
-                }
-
-                return styles;
-            }
-
             // for loading data as an overlay layer
-            function loadOverlayData(datasetKey) {
+            function loadDatasetLayer(datasetKey) {
                 // Remove any current data layer and reset the info panel
-                if (labMap.overlayData !== null) labMap.overlayData.removeFrom(labMap.map);
+                if (labMap.datasetLayer !== null) {
+                    labMap.datasetLayer.removeFrom(labMap.map);
+                    labMap.datasetLayer = null;
+                    labMap.datasetGeoJson = null;
+                }
                 labMap.updateInfo();
 
                 // Check to see if the dataset key we've been given matches any datset objects
@@ -218,7 +229,18 @@
                                 var layerOptions = { style: styleOverlayData, onEachFeature: featureEvents, pointToLayer: pointData, pane: 'pane_data_overlay' };
                                 if (objDatasets[datasetKey].attribution !== null) layerOptions['attribution'] = 'data source: ' + objDatasets[datasetKey].attribution;
 
-                                labMap.overlayData = L.geoJSON(data, layerOptions).addTo(labMap.map);
+                                labMap.datasetGeoJson = L.geoJSON(data, layerOptions);     // create and store the GeoJSON object
+
+                                // Are we requiring marker clustering?
+                                if (objDatasets[datasetKey].hasOwnProperty('cluster') && objDatasets[datasetKey].cluster === true) {
+                                    labMap.datasetLayer = L.markerClusterGroup();            // create a Leaflet marker cluster
+                                    labMap.datasetLayer.addLayer(labMap.datasetGeoJson);     // add the GeoJSON to the cluster object - necessary to preserve GeoJSON containing both points and polygons
+                                }
+                                else {
+                                    labMap.datasetLayer = labMap.datasetGeoJson;             // set the overlay object equal to the GeoJSON object as we are not using clusering
+                                }
+
+                                labMap.datasetLayer.addTo(labMap.map);                       // add the dataset layer to the map
                             }
                             catch (e) {
                                 labError(new LabException("Error attempting to create GeoJSON Leaflet layer: " + e.message));
@@ -324,7 +346,8 @@
                     about: 'Electric car charging points in Trafford from OS OpenMap - Local.<br /><br />Download: <a href="https://www.trafforddatalab.io/open_data/car_charging_points/trafford_car_charging_points.csv" target="_blank">CSV</a> | <a href="https://www.trafforddatalab.io/open_data/car_charging_points/trafford_car_charging_points.geojson" target="_blank">GeoJSON</a>.<br />Further resources available <a href="https://github.com/traffordDataLab/open_data/tree/master/car_charging_points" target="_blank">on GitHub</a>.',
                     attribution: 'Ordnance Survey',
                     url: 'https://www.trafforddatalab.io/open_data/car_charging_points/trafford_car_charging_points.geojson',
-                    theme: 'Transport'
+                    theme: 'Transport',
+                    cluster: true
                 },
                 'fire_stations': {
                     title: 'Fire stations',
@@ -487,7 +510,7 @@
             var datasetQS = labGetQryStrValByKey('dataset');
 
             // Create the select element to choose the objDatasets
-            var datasetSelect = '<select name="frmDatasetList" onChange="loadOverlayData(this.value)" class="datasetSelect"><option value="" selected="selected">Select a dataset to visualise...</option>';
+            var datasetSelect = '<select name="frmDatasetList" onChange="loadDatasetLayer(this.value)" class="datasetSelect"><option value="" selected="selected">Select a dataset to visualise...</option>';
 
             var optGroupTheme = '';     // ensure we create new optgroup tags based on the themes
 
@@ -516,8 +539,9 @@
             });
 
             labMap.baseLayers['Low detail'].addTo(labMap.map);   // Choose the base/tile layer for the map
-            labMap.overlayData = null;  // object to store overlay data
-            labMap.featureCache = null; // for caching the feature currently selected
+            labMap.datasetGeoJson = null;   // object to store GeoJSON created from datasets loaded from the select list. ***NOTE*** this object is important for the resetting of styles for clusered marker datasets
+            labMap.datasetLayer = null;     // either a copy of labMap.datasetGeoJson or a leaflet.markercluster object containing labMap.datasetGeoJson layers - depends on whether we are clustering point data or not
+            labMap.featureCache = null;     // for caching the currently selected feature
 
             // Polygon feature styling
             labMap.poly = {
@@ -548,7 +572,7 @@
             });
 
             // Check if there is a dataset to load via the Query String
-            if (datasetQS !== null) loadOverlayData(datasetQS);
+            if (datasetQS !== null) loadDatasetLayer(datasetQS);
 
 
             // ######### EVENTS #########
