--- a/explore/index.html
+++ b/explore/index.html
@@ -283,14 +283,14 @@
                     attribution: 'Department for Environment Food & Rural Affairs (Defra)',
                     url: 'https://www.trafforddatalab.io/open_data/AQMA/trafford_aqma_styled.geojson',
                     theme: 'Environment'
-                },
+                },/*
                 'betting_shops': {
                     title: 'Betting shops',
                     about: 'Premises licence data for Trafford.<br /><br />Download: <a href="https://www.trafforddatalab.io/open_data/betting_shops/bettingshops_trafford.csv" target="_blank">CSV</a> | <a href="https://www.trafforddatalab.io/open_data/betting_shops/bettingshops_trafford.geojson" target="_blank">GeoJSON</a>.<br />Further resources available <a href="https://github.com/traffordDataLab/open_data/tree/master/betting_shops" target="_blank">on GitHub</a>.',
                     attribution: 'Gambling Commission',
                     url: 'https://www.trafforddatalab.io/open_data/betting_shops/bettingshops_trafford.geojson',
                     theme: 'Licenced premises'
-                },
+                },*/
                 'buildings': {
                     title: 'Buildings',
                     about: 'Buildings in Trafford derived from Ordnance Survey\'s OpenMap - Local.<br /><br />Download: <a href="https://www.trafforddatalab.io/open_data/buildings/trafford_buildings.geojson" target="_blank">GeoJSON</a>.<br />Further resources available <a href="https://github.com/traffordDataLab/open_data/tree/master/buildings" target="_blank">on GitHub</a>.',
@@ -310,14 +310,16 @@
                     about: 'Locations of Local Authority controlled CCTV cameras in Trafford.<br /><br />Download: <a href="https://www.trafforddatalab.io/open_data/cctv/CCTV_cameras_trafford.csv" target="_blank">CSV</a> | <a href="https://www.trafforddatalab.io/open_data/cctv/CCTV_cameras_trafford.geojson" target="_blank">GeoJSON</a>.<br />Further resources available <a href="https://github.com/traffordDataLab/open_data/tree/master/cctv" target="_blank">on GitHub</a>.',
                     attribution: 'Trafford Council',
                     url: 'https://www.trafforddatalab.io/open_data/cctv/CCTV_cameras_trafford.geojson',
-                    theme: 'Community Safety'
+                    theme: 'Community Safety',
+                    cluster: true
                 },
                 'defibrillators': {
                     title: 'Defibrillators',
                     about: 'Defibrillator locations within Trafford. Please note that there may be restrictions on access and availability and locations are approximate.<br /><br />Download: <a href="https://www.trafforddatalab.io/open_data/defibrillators/trafford_defibrillators.csv" target="_blank">CSV</a> | <a href="https://www.trafforddatalab.io/open_data/defibrillators/trafford_defibrillators.geojson" target="_blank">GeoJSON</a>.<br />Further resources available <a href="https://github.com/traffordDataLab/open_data/tree/master/defibrillators" target="_blank">on GitHub</a>.',
                     attribution: 'Trafford Council',
                     url: 'https://www.trafforddatalab.io/open_data/defibrillators/trafford_defibrillators.geojson',
-                    theme: 'Health'
+                    theme: 'Health',
+                    cluster: true
                 },
                 'further_education_colleges': {
                     title: 'Further education colleges',
@@ -409,7 +411,8 @@
                     about: 'Listed buildings in Trafford.<br /><br />Download: <a href="https://www.trafforddatalab.io/open_data/listed_buildings/trafford_listed_buildings.csv" target="_blank">CSV</a> | <a href="https://www.trafforddatalab.io/open_data/listed_buildings/trafford_listed_buildings.geojson" target="_blank">GeoJSON</a>.<br />Further resources available <a href="https://github.com/traffordDataLab/open_data/tree/master/listed_buildings" target="_blank">on GitHub</a>.',
                     attribution: 'Historic England (English Heritage)',
                     url: 'https://www.trafforddatalab.io/open_data/listed_buildings/trafford_listed_buildings.geojson',
-                    theme: 'Historical Interest'
+                    theme: 'Historical Interest',
+                    cluster: true
                 },
                 'metrolink_stops': {
                     title: 'Metrolink stops',
@@ -437,7 +440,8 @@
                     about: 'Locations of pharmacies in Trafford.<br /><br />Download: <a href="https://www.trafforddatalab.io/open_data/pharmacies/trafford_pharmacies.csv" target="_blank">CSV</a> | <a href="https://www.trafforddatalab.io/open_data/pharmacies/trafford_pharmacies.geojson" target="_blank">GeoJSON</a>.<br />Further resources available <a href="https://github.com/traffordDataLab/open_data/tree/master/pharmacies" target="_blank">on GitHub</a>.',
                     attribution: 'Trafford Council',
                     url: 'https://www.trafforddatalab.io/open_data/pharmacies/trafford_pharmacies.geojson',
-                    theme: 'Health'
+                    theme: 'Health',
+                    cluster: true
                 },
                 'roads': {
                     title: 'Roads',
