Added libraries datasets.

--- a/explore/index.html
+++ b/explore/index.html
@@ -327,14 +327,7 @@
                     attribution: 'Department for Environment Food & Rural Affairs (Defra)',
                     url: 'https://www.trafforddatalab.io/open_data/AQMA/trafford_aqma_styled.geojson',
                     theme: 'Environment'
-                },/*
-                'betting_shops': {
-                    title: 'Betting shops',
-                    about: 'Premises licence data for Trafford.<br /><br />Download: <a href="https://www.trafforddatalab.io/open_data/betting_shops/bettingshops_trafford.csv" target="_blank">CSV</a> | <a href="https://www.trafforddatalab.io/open_data/betting_shops/bettingshops_trafford.geojson" target="_blank">GeoJSON</a>.<br />Further resources available <a href="https://github.com/traffordDataLab/open_data/tree/master/betting_shops" target="_blank">on GitHub</a>.',
-                    attribution: 'Gambling Commission',
-                    url: 'https://www.trafforddatalab.io/open_data/betting_shops/bettingshops_trafford.geojson',
-                    theme: 'Licenced premises'
-                },*/
+                },
                 'buildings': {
                     title: 'Buildings',
                     about: 'Buildings in Trafford derived from Ordnance Survey\'s OpenMap - Local.<br /><br />Download: <a href="https://www.trafforddatalab.io/open_data/buildings/trafford_buildings.geojson" target="_blank">GeoJSON</a>.<br />Further resources available <a href="https://github.com/traffordDataLab/open_data/tree/master/buildings" target="_blank">on GitHub</a>.',
@@ -523,6 +516,20 @@
                     attribution: 'Ordnance Survey',
                     url: 'https://www.trafforddatalab.io/open_data/woodland/trafford_woodland_styled.geojson',
                     theme: 'Environment'
+                },
+                'libraries_points': {
+                    title: 'Libraries (point data)',
+                    about: 'Locations of libraries within Trafford.<br /><br />Download: <a href="https://www.trafforddatalab.io/open_data/libraries/trafford_libraries.csv" target="_blank">CSV</a> | <a href="https://www.trafforddatalab.io/open_data/libraries/trafford_libraries_points.geojson" target="_blank">GeoJSON</a>.<br />Further resources available <a href="https://github.com/traffordDataLab/open_data/tree/master/libraries" target="_blank">on GitHub</a>.',
+                    attribution: 'Trafford Council',
+                    url: 'https://www.trafforddatalab.io/open_data/libraries/trafford_libraries_points.geojson',
+                    theme: 'Community Services'
+                },
+                'libraries_polygons': {
+                    title: 'Libraries (building polygons)',
+                    about: 'Locations of libraries within Trafford.<br /><br />Download: <a href="https://www.trafforddatalab.io/open_data/libraries/trafford_libraries.csv" target="_blank">CSV</a> | <a href="https://www.trafforddatalab.io/open_data/libraries/trafford_libraries_polygons.geojson" target="_blank">GeoJSON</a>.<br />Further resources available <a href="https://github.com/traffordDataLab/open_data/tree/master/libraries" target="_blank">on GitHub</a>.',
+                    attribution: 'Trafford Council',
+                    url: 'https://www.trafforddatalab.io/open_data/libraries/trafford_libraries_polygons_styled.geojson',
+                    theme: 'Community Services'
                 }
 
                 /* Add new datasets using the contruct below:
