Added train stops dataset.

--- a/explore/index.html
+++ b/explore/index.html
@@ -530,6 +530,13 @@
                     attribution: 'Trafford Council',
                     url: 'https://www.trafforddatalab.io/open_data/libraries/trafford_libraries_polygons_styled.geojson',
                     theme: 'Community Services'
+                },
+                'train_stops': {
+                    title: 'Train stops',
+                    about: 'Train stops/stations in Trafford.<br /><br />Download: <a href="https://www.trafforddatalab.io/open_data/transport/trains/stops/trafford_train_stops.csv" target="_blank">CSV</a> | <a href="https://www.trafforddatalab.io/open_data/transport/trains/stops/trafford_train_stops.geojson" target="_blank">GeoJSON</a>.<br />Further resources available <a href="https://github.com/traffordDataLab/open_data/tree/master/transport/trains/stops" target="_blank">on GitHub</a>.',
+                    attribution: 'Transport for Greater Manchester',
+                    url: 'https://www.trafforddatalab.io/open_data/transport/trains/stops/trafford_train_stops.geojson',
+                    theme: 'Transport'
                 }
 
                 /* Add new datasets using the contruct below:
