Added provisional leisure centres dataset in preview mode.

--- a/explore/index.html
+++ b/explore/index.html
@@ -546,6 +546,14 @@
                     theme: 'Licenced premises',
                     cluster: true,
                     hidden: true
+                },
+                'leisure_centres': {
+                    title: 'Leisure Centres',
+                    about: 'Leisure Centres and associated car parks in Trafford.<br /><br />Download: <a href="https://www.trafforddatalab.io/open_data/leisure_centres/trafford_leisure_centres.csv" target="_blank">CSV</a> | <a href="https://www.trafforddatalab.io/open_data/leisure_centres/trafford_leisure_centres.geojson" target="_blank">GeoJSON</a>.<br />Further resources available <a href="https://github.com/traffordDataLab/open_data/tree/master/leisure_centres" target="_blank">on GitHub</a>.',
+                    attribution: 'Trafford Council',
+                    url: 'https://www.trafforddatalab.io/open_data/leisure_centres/trafford_leisure_centres_styled.geojson',
+                    theme: 'Community Services',
+                    hidden: true
                 }
 
                 /* Add new datasets using the contruct below:
